--- a/index.html
+++ b/index.html
@@ -7,3 +7,13 @@
     <link rel="stylesheet" href="sass/main.css">
     <title>calculator</title>
 </head>
+<body>
+    <div class="box">
+  
+        <div class="square" style="--i:0;"></div>
+        <div class="square" style="--i:1;"></div>
+        <div class="square" style="--i:2;"></div>
+        <div class="square" style="--i:3;"></div>
+        <div class="square" style="--i:4;"></div>
+        <div class="square" style="--i:5;"></div>
+        
