--- a/index.html
+++ b/index.html
@@ -16,4 +16,29 @@
         <div class="square" style="--i:3;"></div>
         <div class="square" style="--i:4;"></div>
         <div class="square" style="--i:5;"></div>
+        <div class="container" data-tilt data-tilt-full-page-listening data-tilt-axis="x">
+            <form class="calculator" name="calc">
+              <input type="text" readonly class="value" name="txt"/>
+              <span class="num clear" onclick="calc.txt.value = ''">c</span>
+              <span class="num" onclick="document.calc.txt.value += '/'">/</span>
+              <span class="num" onclick="document.calc.txt.value += '*'">*</span>
+              <span class="num" onclick="document.calc.txt.value += '7'">7</span>
+              <span class="num" onclick="document.calc.txt.value += '8'">8</span>
+              <span class="num" onclick="document.calc.txt.value += '9'">9</span>
+              <span class="num" onclick="document.calc.txt.value += '-'">-</span>
+              <span class="num" onclick="document.calc.txt.value += '4'">4</span>
+              <span class="num" onclick="document.calc.txt.value += '5'">5</span>
+              <span class="num" onclick="document.calc.txt.value += '6'">6</span>
+              <span class="num plus" onclick="document.calc.txt.value += '+'">+</span>
+              <span class="num" onclick="document.calc.txt.value += '1'">1</span>
+              <span class="num" onclick="document.calc.txt.value += '2'">2</span>
+              <span class="num" onclick="document.calc.txt.value += '3'">3</span>
+              <span class="num" onclick="document.calc.txt.value += '0'">0</span>
+              <span class="num" onclick="document.calc.txt.value += '00'">00</span>
+              <span class="num" onclick="document.calc.txt.value += '.'">.</span>
+              <span class="num equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
+            </form>
+          </div>
+          
+        </div>
         
